tests/invariants/fail/all_types.act
constructor of C
interface constructor(uint _a, uint _b, bool _c, bool _d, string _e, string _f)

creates

    uint a := _a
    bool b := _c
    string c := _e

invariants

    a == _b
    b == _d
    c == _f
